WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243197
[LFC][IFC] Inconsistent integral rounding of baseline relative logical top values
https://bugs.webkit.org/show_bug.cgi?id=243197
Summary
[LFC][IFC] Inconsistent integral rounding of baseline relative logical top va...
alan
Reported
2022-07-25 21:47:57 PDT
ssia
Attachments
Patch
(4.26 KB, patch)
2022-07-25 22:14 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.43 KB, patch)
2022-07-26 06:12 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.41 KB, patch)
2022-07-26 08:02 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-07-25 22:14:37 PDT
Created
attachment 461212
[details]
Patch
alan
Comment 2
2022-07-26 06:12:17 PDT
Created
attachment 461222
[details]
Patch
Antti Koivisto
Comment 3
2022-07-26 06:30:51 PDT
Comment on
attachment 461222
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=461222&action=review
> Source/WebCore/layout/formattingContexts/inline/InlineLevelBox.h:127 > + void setLogicalTop(InlineLayoutUnit logicalTop) { logicalTop >= 0 ? m_logicalRect.setTop(roundToInt(logicalTop)) : m_logicalRect.setTop(-roundToInt(-logicalTop)); }
I think you want ?: inside setTop
alan
Comment 4
2022-07-26 06:36:20 PDT
(In reply to Antti Koivisto from
comment #3
)
> Comment on
attachment 461222
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=461222&action=review
> > > Source/WebCore/layout/formattingContexts/inline/InlineLevelBox.h:127 > > + void setLogicalTop(InlineLayoutUnit logicalTop) { logicalTop >= 0 ? m_logicalRect.setTop(roundToInt(logicalTop)) : m_logicalRect.setTop(-roundToInt(-logicalTop)); } > > I think you want ?: inside setTop
oops, right.
alan
Comment 5
2022-07-26 08:02:54 PDT
Created
attachment 461223
[details]
Patch
EWS
Comment 6
2022-07-26 09:13:47 PDT
Committed
252825@main
(c4803567c7f8): <
https://commits.webkit.org/252825@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461223
[details]
.
Radar WebKit Bug Importer
Comment 7
2022-07-26 09:14:34 PDT
<
rdar://problem/97609624
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug