[LFC][IFC] Inconsistent integral rounding of baseline relative logical top values https://bugs.webkit.org/show_bug.cgi?id=243197

Reviewed by Antti Koivisto.

Inline level box's logical top is relative to the parent inline box (mostly root inline box) baseline position. In most cases this translate to a negative top value. It later gets resolved to a value relative to the line box (turns the negative value to a positive one).

The simplest case (assume a font metric with 16px ascent)
  <div><span>baseline aligned content</span></div>
produces a -16px 'top' for the <span>, relative to the root's baseline, which gets resolved to 0px relative to the line box (-> 16px (root's baseline value) + (-16px) (nested inline box's top) = 0px).

This patches fixes the cases when (soon-to-be-removed) integral rounding produces incorrect top values by rounding 0.5 values to 1 while -0.5 to 0. Such (correct) rounding produces off-by-one resolved top values (e.g. root's baseline is at 10.5px. Nested inline box, in flush with the root, top computes to -10.5px. 10.5 rounds to 11 while -10.5 rounds to -10 and we end up resolving the inline box's top to 11 + (-10) -> 1 instead of 0.

* LayoutTests/fast/inline/incorrect-integral-top-value-with-baseline-align-expected.html: Added.
* LayoutTests/fast/inline/incorrect-integral-top-value-with-baseline-align.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLevelBox.h:
(WebCore::Layout::InlineLevelBox::setLogicalTop):

Canonical link: https://commits.webkit.org/252825@main